--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>{% block title %}{% endblock title %}Green Dog Today жизнь в разных странах мира</title>
+<title>{% block title %}{% endblock title %}Блог Михаила Якименко</title>
 <link rel="shortcut icon" href="/static/images/fav-64x64.png" type="image/x-icon" />
 <!-- Render -->
 <link rel="stylesheet" type="text/css" href="/static/css/normalize.css">
